@startuml
'https://plantuml.com/class-diagram

class ResetPasswordForm {
    - users: List<User>
    - userId: String
}

class ResetPasswordController {
    + doGet(request: HttpServletRequest, response: HttpServletResponse): void
    + doPost(request: HttpServletRequest, response: HttpServletResponse): void
}

class UserService {
    + findAll(): List<User>
    + findById(id: Integer): User
    + resetPassword(user: User): void
    + sendEmail(user: User): void
}

class UserRepository {
    + findAll(): List<User>
    + findById(id: Integer): User
}

ResetPasswordController ..> ResetPasswordForm
ResetPasswordController *--> UserService
UserService *--> UserRepository

@enduml